--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,9 +62,13 @@ dependencies {
     def accompanist_version = "0.24.3-alpha"
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
 
     //图标扩展
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
+    //图片加载
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
