--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        ndk {
+            abiFilters "arm64-v8a"
+        }
     }
 
     buildTypes {
@@ -42,6 +46,9 @@ android {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
+        pickFirst '**/libc++_shared.so'
+        doNotStrip "*/arm64-v8a/libYTCommon.so"
+
     }
 }
 
@@ -75,6 +82,9 @@ dependencies {
 
     //webview
     implementation project(path: ':webview')
+
+    //播放器
+    implementation 'com.tencent.liteav:LiteAVSDK_Player:latest.release'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
