--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,18 @@ dependencies {
     //datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
+    def retrofit = "2.9.0"
+    //网络请求框架
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    //GSON
+//    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+    //moshi
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
+
+    def moshi_version = "1.13.0"
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
